--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "antd": "^5.14.0",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.4.1",
@@ -20,7 +21,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "redux": "^5.0.1",
     "sass": "^1.70.0",
     "sort-by": "^1.2.0"
   },
