--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,14 +40,14 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          REACT_APP_DEV: false
-          REACT_APP_API_KEY: AIzaSyA7uxqDUHLiJBKDf96xnErmrZiKxZSGOHE
-          REACT_APP_AUTH_DOMAIN: chatapp-632ea.firebaseapp.com
-          REACT_APP_DB_NAME: https://chatapp-632ea-default-rtdb.firebaseio.com
-          REACT_APP_PROJECT_ID: chatapp-632ea
-          REACT_APP_STORAGE_BUCKET: chatapp-632ea.appspot.com
-          REACT_APP_MESSAGE_SENDER_ID: 480343205415
-          REACT_APP_APP_ID: 1:480343205415:web:9d65028f1ea3f568115002
+          DEV: false
+          API_KEY: AIzaSyA7uxqDUHLiJBKDf96xnErmrZiKxZSGOHE
+          AUTH_DOMAIN: chatapp-632ea.firebaseapp.com
+          DB_NAME: https://chatapp-632ea-default-rtdb.firebaseio.com
+          PROJECT_ID: chatapp-632ea
+          STORAGE_BUCKET: chatapp-632ea.appspot.com
+          MESSAGE_SENDER_ID: 480343205415
+          APP_ID: 1:480343205415:web:9d65028f1ea3f568115002
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
